# health_status_calculator

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  calculation.py  docker-compose.yaml  init.sql  pyproject.toml  repo_config.py  requirements.txt  run_calc.py  test_calc.py
.github/workflows/: build.yaml  codeql.yml
api/: main.py  pass_data.py
config/: configuration.yaml
core/: calculation.py
database/: connection.py  loadDB.py
health_status_core/: calculation.py
hsc-chart/: Chart.yaml  values.yaml
hsc-chart/templates/: NOTES.txt  _helpers.tpl  app_configmap.yaml  deployment.yaml  pod.yaml  postgres_configmap.yaml  secret.yaml  service.yaml
hsc-chart/templates/tests/: test-connection.yaml
models/: config_loader.py  formula_params.py  github_api.py  token_loader.py
tests/: test_calc.py  test_db.py
